# clp-ffi-go

./: .gitignore  .gitmodules  .golangci.yaml  .golangci.yml  .yamllint.yml  BUILD.bazel  MODULE.bazel  README.rst  cgo_amd64.go  cgo_arm64.go  cgo_external.go  ffi.go  generate.go  go.mod  go.sum  task-lint.yaml  task-lint.yml  task-utils.yml  taskfile.yaml  taskfile.yml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: build.yml  lint.yml  test.yml
bazel/: deps.bzl  nlohmann_json.patch
cpp/: .clang-format  .clang-tidy  BUILD.bazel  CMakeLists.txt  clp_ext_nlohmann_json.bzl  clp_ffi_core.bzl  deps.bzl
cpp/src/: LogEvent.cpp  LogEvent.hpp  log_event.h
cpp/src/ffi_go/: api_decoration.h  defs.h  types.hpp
cpp/src/ffi_go/ir/: LogTypes.hpp  decoder.cpp  decoder.h  deserializer.cpp  deserializer.h  encoder.cpp  encoder.h  serializer.cpp  serializer.h  types.hpp
cpp/src/ffi_go/search/: wildcard_query.cpp  wildcard_query.h
cpp/src/ir/: decoding.cpp  decoding.h  encoding.cpp  encoding.h
cpp/src/lint/: msgpack.hpp
cpp/src/message/: encoding.cpp  encoding.h
ffi/: BUILD.bazel  cgo_amd64.go  cgo_arm64.go  cgo_external.go  ffi.go
include/ffi_go/: api_decoration.h  defs.h
include/ffi_go/ir/: decoder.h  deserializer.h  encoder.h  serializer.h
include/ffi_go/search/: wildcard_query.h
ir/: BUILD.bazel  build_amd64.go  build_arm64.go  cgo_amd64.go  cgo_arm64.go  cgo_defs.go  cgo_external.go  decoder.go  deserializer.go  encoder.go  encoder_test.go  ir.go  ir_file_test.go  ir_test.go  irerror.go  irerror_string.go  reader.go  reader_test.go  serder_test.go  serializer.go  writer.go  writeread_test.go
message/: BUILD.bazel  cgo_amd64.go  cgo_arm64.go  cgo_external.go  encoding.go  encoding_test.go  msgerror.go  msgerror_string.go
search/: BUILD.bazel  cgo_amd64.go  cgo_arm64.go  cgo_external.go  wildcard_query.go
test/: BUILD.bazel  finalizers.go
