load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "libclp_ffi",
    srcs = glob(["cpp/src/ffi_go/**"]) + [
    ],
    hdrs = glob(["cpp/src/ffi_go/**/*.h"]),
    includes = [
        "cpp/src",
    ],
    deps = [
        "@com_github_y_scope_clp//:libclp_core",
    ],
    copts = [
        "-std=c++20",
    ],
    visibility = ["//visibility:public"],
)
