module(name = "com_github_y_scope_clp_ffi_go", version = "0.0.5-beta")

bazel_dep(name = "gazelle", version = "0.37.0")
bazel_dep(name = "rules_go", version = "0.48.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.3")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_klauspost_compress",
)

clp_ffi_go_ext_deps = use_extension("//cpp:deps.bzl", "clp_ffi_go_ext_deps")
use_repo(clp_ffi_go_ext_deps, "com_github_y_scope_clp")
