module(
    name = "com_github_y_scope_clp_ffi_go",
    version = "0.0.6-beta",
)

bazel_dep(name = "gazelle", version = "0.37.0")
bazel_dep(name = "rules_go", version = "0.48.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "platforms", version = "0.0.10")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_klauspost_compress",
    "com_github_vmihailenco_msgpack_v5",
)

# c++
bazel_dep(name = "msgpack-c", version = "6.1.0")
bazel_dep(name = "nlohmann_json", version = "3.11.3.bcr.1")
single_version_override(
    module_name = "nlohmann_json",
    patches = ["//:bazel/nlohmann_json.patch"],
)

clp_ffi_go_ext_deps = use_extension("//:bazel/deps.bzl", "clp_ffi_go_ext_deps")
use_repo(clp_ffi_go_ext_deps, "com_github_y_scope_clp")
use_repo(clp_ffi_go_ext_deps, "clp_ext_com_github_ned14_outcome")
