load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ir",
    srcs = [
       "cgo_defs.go",
       "decoder.go",
       "deserializer.go",
       "encoder.go",
       "ir.go",
       "irerror.go",
       "irerror_string.go",
       "reader.go",
       "serializer.go",
       "writer.go",
    ],
    cgo = True,
    cdeps = [
        "//cpp:libclp_ffi_go",
    ],
    importpath = "github.com/y-scope/clp-ffi-go/ir",
    visibility = ["//visibility:public"],
    deps = [
        "//ffi",
        "//search",
    ],
)

alias(
    name = "go_default_library",
    actual = ":ir",
    visibility = ["//visibility:public"],
)

go_test(
    name = "ir_test",
    srcs = [
        "*_test.go",
    ],
    embed = [":ir"],
    deps = [
        "@com_github_klauspost_compress//zstd",
    ],
)
