load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ir",
    srcs = glob(["*.go"], exclude=["build_*.go", "*_test.go"]),
    cgo = True,
    cdeps = [
        "//cpp:libclp_ffi_go",
    ],
    importpath = "github.com/y-scope/clp-ffi-go/ir",
    visibility = ["//visibility:public"],
    deps = [
        "//ffi",
        "@com_github_klauspost_compress//zstd",
        "@com_github_vmihailenco_msgpack_v5//:msgpack",
    ],
)

alias(
    name = "go_default_library",
    actual = ":ir",
    visibility = ["//visibility:public"],
)

go_test(
    name = "ir_test",
    srcs = glob([ "*_test.go"]),
    embed = [":ir"],
    deps = [
        "@com_github_klauspost_compress//zstd",
    ],
)
