load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "message",
    srcs = [
        "cgo_amd64.go",
        "cgo_arm64.go",
        "encoding.go",
        "msgerror.go",
        "msgerror_string.go",
    ],
    cgo = True,
    cdeps = ["//:libclp_ffi"],
    importpath = "github.com/y-scope/clp-ffi-go/message",
    visibility = ["//visibility:public"],
    deps = ["//ffi"],
)

alias(
    name = "go_default_library",
    actual = ":message",
    visibility = ["//visibility:public"],
)

go_test(
    name = "message_test",
    srcs = ["encoding_test.go"],
    embed = [":message"],
    deps = ["//test"],
)
