load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "search",
    srcs = [
        "wildcard_query.go",
    ],
    cgo = True,
    cdeps = [
        "//cpp:libclp_ffi_go",
    ],
    importpath = "github.com/y-scope/clp-ffi-go/search",
    visibility = ["//visibility:public"],
    deps = [
        "//ffi",
    ],
)

alias(
    name = "go_default_library",
    actual = ":search",
    visibility = ["//visibility:public"],
)
