load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "test",
    srcs = ["finalizers.go"],
    importpath = "github.com/y-scope/clp-ffi-go/test",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":test",
    visibility = ["//visibility:public"],
)
